# kpsa-hackathon-2025

./: README.md
backend/promise-fruit/: .gitignore  Dockerfile  docker_build_and_push.sh  init.sql  pyproject.toml  schema.sql
backend/promise-fruit/src/: auth_session.py  constant.py  database.py  entity.py  envs.py  main.py  schema.py
backend/promise-fruit/src/client/: async_client.py  gg_client.py  open_ai_client.py
backend/promise-fruit/src/router/: auth_router.py  drug_router.py  family_router.py  medication_router.py  notification_router.py  plant_router.py  prescription_router.py  user_router.py
backend/promise-fruit/src/static/: kakao.html  login.html
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/assets/: GardenPage.tsx
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx  VoiceAlarm.tsx
frontend/src/hooks/: useAPI.ts
frontend/src/lib/: GoogleVisionService.ts  api.ts  familyRequestManager.ts  kakao.ts  prescriptionParserManager.ts
frontend/src/routers/: index.tsx  patientRouter.tsx
frontend/src/types/: backendPrescription.ts  env.d.ts  global.d.ts  index.ts  plant.ts  prescription.ts
frontend/src/views/: About.tsx  AddMedicine.tsx  AddMedicineDetail.tsx  AddMedicineSearch.tsx  Album.tsx  Dose.tsx  DrugCart.tsx  Family.tsx  FamilyNickname.tsx  FamilyPermissions.tsx  FamilyPhoneInput.tsx  (+22 more)
mobile/: pubspec.yaml
mobile/lib/: main.dart
(+25 files in other folders)
